Fix styling and alignment in Buy more shares container (3)

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -31,8 +31,7 @@ a {
 .box-container {
     background-color: #f5fafb;
     border-radius: $global-border-radius-m;
-    padding: 32px;
-    position: relative;
+    padding: 40px;
 
     .title {
         color: $blue-primary;
